--- a/public/themes/admin/assets/css/main.css
+++ b/public/themes/admin/assets/css/main.css
@@ -90,4 +90,21 @@ body{background: #f5f5f5;}
     cursor: pointer;
     float: right;
     margin-top: 5px;
-}}
+}
+.login{width:1200px;height:612px;background:url("../img/bg.png") no-repeat center;position:absolute;top:50%;margin-top:-350px;left:50%;margin-left:-600px;}
+.login-bg{background:#349fff}
+.login-con{width:1029px;height100%;margin:0 0 0 115px;position:relative;}
+.login-con .login-con-title{padding:35px 50px;color:#2b2b2b;font-size:16px;}
+.login-con form{width:320px;position:absolute;top:160px;right:85px;}
+.form-title{height:50px;color:#349fff;line-height:50px;text-align:center;border-bottom:2px solid #349fff;font-size:16px;margin-bottom:30px;}
+.login-con form .layui-input{width:100%;height:50px;border:none;border-bottom:1px solid #bbb;margin:10px 0}
+.login-con form .login_btn{width:180px !important;height:40px;border-radius:40px;background:#349fff;color:#fff;margin:50px auto;display:block;border:none;cursor:pointer;}
+
+
+
+
+
+
+
+
+
